--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,14 @@
     },
     "require": {
         "hoa/ruler": "~1.0",
+        "symfony/property-access": "~2.3"
+    },
+    "require-dev": {
         "doctrine/orm": "~2.4",
-        "symfony/property-access": "~2.6"
+        "doctrine/cache": "~1.0"
+    },
+    "suggests": {
+        "doctrine/orm": "To execute rules as Doctrine queries",
+        "doctrine/cache": "To cache rules."
     }
 }
