Named the project RulerZ (couldn't find a decent name...) and updated the namespace accordingly

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
+    "name": "kphoen/rulerz",
+    "type": "library",
+    "license": "MIT",
     "autoload": {
-        "psr-4": { "": "src/", "Entity\\": "entities/" }
+        "psr-4": { "RulerZ\\": "src/", "Entity\\": "entities/" }
     },
     "require": {
         "hoa/ruler": "~1.0",
