Add myself to the authors in the composer.json file

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
     "name": "kphoen/rulerz",
     "type": "library",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Kévin Gomez",
+            "email": "contact@kevingomez.fr"
+        }
+    ],
     "autoload": {
         "psr-4": { "RulerZ\\": "src/", "Entity\\": "examples/entities/" }
     },
