Autoload the Entity namespace in dev environment only

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         }
     ],
     "autoload": {
-        "psr-4": { "RulerZ\\": "src/", "Entity\\": "examples/entities/" }
+        "psr-4": { "RulerZ\\": "src/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Entity\\": "examples/entities/" }
     },
     "require": {
         "hoa/ruler": "~1.0",
