Add more examples

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "psr-4": { "RulerZ\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Entity\\": "examples/entities/" }
+        "psr-4": { "Entity\\": "examples/entities/", "SampleSpecs\\": "examples/specs/" }
     },
     "require": {
         "hoa/ruler": "~1.0",
