--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,12 @@
     "require-dev": {
         "doctrine/orm": "~2.4",
         "doctrine/cache": "~1.0",
+        "elasticsearch/elasticsearch": "~1.0",
         "phpspec/phpspec": "~2.0"
     },
     "suggests": {
+        "doctrine/cache": "To cache rules.",
         "doctrine/orm": "To execute rules as Doctrine queries",
-        "doctrine/cache": "To cache rules."
+        "elasticsearch/elasticsearch": "To execute rules as Elasticsearch queries"
     }
 }
