--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ php:
     - 5.4
     - 5.5
     - 5.6
+    - 7.0
+
+matrix:
+    fast_finish: true
+    allow_failures:
+        - php: 7.0
 
 before_script:
     - phpenv config-rm xdebug.ini
     - composer install --prefer-source
 
-script: vendor/bin/phpspec run -f dot
+script:
+    - vendor/bin/phpspec run -f dot
