--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "doctrine/cache": "~1.0",
         "elasticsearch/elasticsearch": "~1.0",
         "ruflin/elastica": "~1.0",
+        "pomm-project/foundation": "@dev",
         "pomm-project/model-manager": "2.0.*@dev",
-        "pomm-project/foundation": "2.0.*@dev",
 
         "coduo/phpspec-data-provider-extension": "~1.0",
         "phpspec/phpspec": "~2.0"
@@ -40,6 +40,6 @@
         "doctrine/cache": "To cache rules.",
         "doctrine/orm": "To execute rules as Doctrine queries",
         "elasticsearch/elasticsearch": "To execute rules as Elasticsearch queries",
-        "pomm-project/foundation": "To execute rules as Pomm queries"
+        "pomm-project/model-manager": "To execute rules as Pomm queries"
     }
 }
