--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
         - php: 7.0
 
 before_script:
-    - phpenv config-rm xdebug.ini
+    - phpenv config-rm xdebug.ini || true
     - composer install --prefer-source
 
 script:
