--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "doctrine/orm": "~2.4",
         "doctrine/cache": "~1.0",
         "elasticsearch/elasticsearch": "~1.0",
+
+        "coduo/phpspec-data-provider-extension": "~1.0",
         "phpspec/phpspec": "~2.0"
     },
     "suggest": {
