--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_script:
     - composer install --prefer-source
 
 script:
-    - vendor/bin/phpspec run -f dot
+    - bin/phpspec run -f dot
