--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /.gitattributes export-ignore
 /.gitignore     export-ignore
 /.travis.yml    export-ignore
+/phpspec.yml    export-ignore
 /README.md      export-ignore
 /doc            export-ignore
 /spec           export-ignore
