Bootstraped Eloquent ORM support

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "ruflin/elastica": "~1.0",
         "pomm-project/foundation": "@dev",
         "pomm-project/model-manager": "2.0.*@dev",
+        "illuminate/database": "~5.0",
 
         "coduo/phpspec-data-provider-extension": "~1.0",
         "phpspec/phpspec": "~2.0"
