--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ matrix:
     allow_failures:
         - php: 7.0
 
-before_script:
+before_install:
     - phpenv config-rm xdebug.ini || true
+    - composer self-update
+
+install:
     - composer install --prefer-source
 
 script:
