--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
             "email": "contact@kevingomez.fr"
         }
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": { "RulerZ\\": "src/" }
     },
