Add bench script

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
 
         "mikey179/vfsStream": "~1.4",
         "coduo/phpspec-data-provider-extension": "~1.0",
-        "phpspec/phpspec": "~2.0"
+        "phpspec/phpspec": "~2.0",
+
+        "hoa/bench": "~2.0",
+        "webmozart/expression": "~1.0@beta"
     },
     "suggest": {
         "kphoen/rulerz-spec-builder": "If you want a specification builder",
