Add an elastica context

--- a/behat.yml
+++ b/behat.yml
@@ -12,3 +12,6 @@ default:
         elasticsearch:
             paths:    [ %paths.base%/features/common, %paths.base%/features/elasticsearch ]
             contexts: [ ElasticsearchContext ]
+        elastica:
+            paths:    [ %paths.base%/features/common ]
+            contexts: [ ElasticaContext ]
