--- a/behat.yml
+++ b/behat.yml
@@ -15,3 +15,6 @@ default:
         elastica:
             paths:    [ %paths.base%/features/common ]
             contexts: [ ElasticaContext ]
+        eloquent:
+            paths:    [ %paths.base%/features/common ]
+            contexts: [ EloquentContext ]
