--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 /.gitignore     export-ignore
 /.travis.yml    export-ignore
 /phpspec.yml    export-ignore
+/Makefile       export-ignore
 /README.md      export-ignore
 /doc            export-ignore
 /spec           export-ignore
