--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,14 @@
-/.gitattributes export-ignore
-/.gitignore     export-ignore
-/.travis.yml    export-ignore
-/phpspec.yml    export-ignore
-/Vagrantfile    export-ignore
-/Makefile       export-ignore
-/README.md      export-ignore
-/doc            export-ignore
-/spec           export-ignore
-/examples       export-ignore
+/.gitattributes  export-ignore
+/.gitignore      export-ignore
+/.travis.yml     export-ignore
+/.rmt.yml        export-ignore
+/.env            export-ignore
+/phpspec.yml     export-ignore
+/Vagrantfile     export-ignore
+/Makefile        export-ignore
+/README.md       export-ignore
+/CONTRIBUTING.md export-ignore
+/CHANGELOG       export-ignore
+/doc             export-ignore
+/tests           export-ignore
+/examples        export-ignore
