--- a/composer.json
+++ b/composer.json
@@ -51,10 +51,7 @@
         "coduo/phpspec-data-provider-extension": "~1.0,!=1.0.2",
         "phpspec/phpspec": "~2.0",
 
-        "behat/behat": "~3.0",
-
-        "hoa/bench": "~2.0",
-        "webmozart/expression": "~1.0@beta"
+        "behat/behat": "~3.0"
     },
     "suggest": {
         "kphoen/rulerz-spec-builder": "If you want a specification builder",
