--- a/behat.yml
+++ b/behat.yml
@@ -9,15 +9,18 @@ default:
         array:
             paths:    [ %paths.base%/tests/features/common, %paths.base%/features/operators, %paths.base%/features/array ]
             contexts: [ ArrayContext ]
+        doctrine_dbal:
+            paths:    [ %paths.base%/tests/features/common ]
+            contexts: [ DoctrineDBALContext ]
         doctrine_orm:
-            paths:    [ %paths.base%/tests/features/common, %paths.base%/features/operators, %paths.base%/features/doctrine_orm ]
+            paths:    [ %paths.base%/tests/features/common, %paths.base%/features/operators ]
             contexts: [ DoctrineOrmContext ]
         elasticsearch:
-            paths:    [ %paths.base%/tests/features/common, %paths.base%/features/elasticsearch ]
+            paths:    [ %paths.base%/tests/features/common ]
             contexts: [ ElasticsearchContext ]
         elastica:
             paths:    [ %paths.base%/tests/features/common ]
             contexts: [ ElasticaContext ]
         eloquent:
-            paths:    [ %paths.base%/tests/features/common ]
+            paths:    [ %paths.base%/tests/features/common, %paths.base%/features/operators ]
             contexts: [ EloquentContext ]
