--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 ELASTICSEARCH_HOST=localhost
 ELASTICSEARCH_PORT=9200
+
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWD=postgres
+POSTGRES_DB=test_rulerz
