--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 ELASTICSEARCH_HOST=localhost
 ELASTICSEARCH_PORT=9200
 
+SOLR_HOST=localhost
+SOLR_PORT=8983
+SOLR_PATH=/solr/
+SOLR_CORE=rulerz_tests
+
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
