--- a/behat.yml
+++ b/behat.yml
@@ -27,3 +27,6 @@ default:
         pomm:
             paths:    [ %paths.base%/tests/features/common ]
             contexts: [ PommContext ]
+        solr:
+            paths:    [ %paths.base%/tests/features/common ]
+            contexts: [ SolariumContext ]
