--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
 
         "mikey179/vfsStream": "~1.4",
         "coduo/phpspec-data-provider-extension": "~1.0,!=1.0.2",
-        "phpspec/phpspec": "~2.0",
+        "phpspec/phpspec": "~2.0,>=2.4@dev",
 
         "behat/behat": "~3.0"
     },
