--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ install:
     - composer install --prefer-source
 
 before_script:
-    - sleep 10 # wait for elasticsearch to start and be available
     - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=4.10.4 SOLR_CORE=rulerz_tests SOLR_CONFS="./scripts/solr/config/conf/schema.xml ./scripts/solr/config/conf/solrconfig.xml" bash
+    - cp -r ./scripts/solr/config/conf/* ./solr-4.10.4/example/multicore/rulerz_tests/conf
 
 script:
     - make databases
