--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,10 @@ matrix:
 before_install:
     - phpenv config-rm xdebug.ini || true
     - composer self-update
+    - if [ "$TRAVIS_PHP_VERSION" = "7.0" ]; then composer require --dev --no-update kphoen/rusty dev-master; fi
 
 install:
-    - composer install --prefer-source
+    - composer install --optimize-autoloader --prefer-source
 
 before_script:
     - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=4.10.4 SOLR_CORE=rulerz_tests SOLR_CONFS="./scripts/solr/config/conf/schema.xml ./scripts/solr/config/conf/solrconfig.xml" bash
@@ -31,3 +32,4 @@ before_script:
 script:
     - make databases
     - make tests
+    - if [ "$TRAVIS_PHP_VERSION" = "7.0" ]; then make rusty; fi
