--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: php
 
 sudo: false
 
+cache:
+    directories:
+        - $HOME/.composer/cache
+
 addons:
     postgresql: "9.4"
 
@@ -23,7 +27,7 @@ before_install:
     - if [ "$TRAVIS_PHP_VERSION" = "7.0" ]; then composer require --dev --no-update kphoen/rusty dev-master; fi
 
 install:
-    - composer install --optimize-autoloader --prefer-source
+    - composer install --optimize-autoloader --no-interaction
 
 before_script:
     - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=4.10.4 SOLR_CORE=rulerz_tests SOLR_CONFS="./scripts/solr/config/conf/schema.xml ./scripts/solr/config/conf/solrconfig.xml" bash
