--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
         "coduo/phpspec-data-provider-extension": "~1.0,!=1.0.2",
         "phpspec/phpspec": "~2.0,>=2.4@dev",
 
-        "behat/behat": "~3.0"
+        "behat/behat": "~3.0",
+
+        "liip/rmt": "^1.2"
     },
     "suggest": {
         "kphoen/rulerz-spec-builder": "If you want a specification builder",
