--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
         "symfony/property-access": "~3.0|~4.0"
     },
     "require-dev": {
+        "ext-json": "*",
+
         "vlucas/phpdotenv": "~2.1",
 
         "doctrine/orm": "~2.4",
