--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require": {
         "php": ">=7.1",
         "hoa/ruler": "~2.0",
-        "symfony/property-access": "~3.0|~4.0"
+        "symfony/property-access": "~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "vlucas/phpdotenv": "~2.1",
