--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require": {
         "php": ">=7.1",
-        "hoa/ruler": "~2.0",
+        "niro/hoa-ruler": "~2.0",
         "symfony/property-access": "~3.0|~4.0"
     },
     "require-dev": {
